--- a/index.html
+++ b/index.html
@@ -21,23 +21,21 @@
 			this.wordsArray = wordsArray;
 			
 			this.getWordCount = function() {
-                	return this.wordsArray.length;
+            return this.wordsArray.length;
                 
                 //find the amount of words in the sentence
 			}
 			
 			this.getLetterCount = function() {
-                var amountOfLetters = 0;
-                for (var i = 0; i < this.wordsArray.length; i++){
-                    amountOfLetters += this.wordsArray.length[i];
+                var letterCount = wordsArray.join(" ");
+				return letterCount.length;
                 }
-                console.log(this.amountOfLetters);
-                return amountOfLetters;
+                
                 		//find the amount of letters in the sentence
-			}
+			
 			
 			this.reverse = function() {
-				//reverse the sentence
+				return wordsArray.reverse();
 			}
 			
 			this.getWordAt = function(i) {
@@ -51,6 +49,8 @@
 		console.log(s.getWordCount() == 4);
         console.log(s.getWordCount());
 		console.log(s.getLetterCount() == 19); //remember spaces!
+        console.log(s.getLetterCount());
+        console.log(s.reverse());
 //		console.log(s.getWordAt(0) == "Hello");
 //		s.reverse();
 //		console.log(s.getWordAt(0) == "Computer");
